--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,7 @@
   <artifactId>Smart_parking3</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>Order_module</module>
-    <module>User_module</module>
-    <module>ParkingLot_module</module>
-    <module>Vehicle_module</module>
-    <module>Administrators_module</module>
-    <module>Integral_module</module>
+    <module>Smart_parking_server</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -35,8 +30,6 @@
     <log4j.version>1.2.17</log4j.version>
     <lombok.version>1.16.18</lombok.version>
     <mysql.version>5.1.47</mysql.version>
-    <druid.version>1.1.16</druid.version>
-    <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
   </properties>
 
 <!--dependencyManagement只有最顶点的父工程才使用
@@ -67,6 +60,29 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
