--- a/Smart_parking_server/Administrators_module/pom.xml
+++ b/Smart_parking_server/Administrators_module/pom.xml
@@ -18,4 +18,11 @@
     </properties>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>BasicTools</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
