--- a/Smart_parking_server/Order_module/src/main/resources/application.yml
+++ b/Smart_parking_server/Order_module/src/main/resources/application.yml
@@ -1,12 +1,23 @@
 server:
   port: 9001
 
+#spring:
+#  #  服务名称------服务名称不能使用下划线，删除下划线或者使用中划线
+#  application:
+#    name: ClientOrder
+#  jackson:
+#    default-property-inclusion: non_null   #Json处理时忽略null
+
+
 spring:
-  #  服务名称------服务名称不能使用下划线，删除下划线或者使用中划线
-  application:
-    name: ClientOrder
+
+  profiles: order
 
   rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
     listener:
       simple:
         prefetch: 1   #每次只能获取一条消息，处理完才能获取下一条（提升消息处理速度，避免消息堆积）
@@ -18,6 +29,7 @@ spring:
           max-attempts: 3  #最大重试次数  次数耗尽则丢弃
           stateless: true   #true为无状态，false为有，如果业务中包含事务则改为false
 
+
   redis:
     lettuce:
       pool:
@@ -26,6 +38,86 @@ spring:
         min-idle: 0 #最小空闲连接，默认
         max-wait: 100ms #连接等待时间
 
-#  jackson:
-#    default-property-inclusion: non_null   #Json处理时忽略null
 
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/Smart_parking_order?useUnicode=true&characterEncoding=UTF-8
+    username: root
+    password: "001124"
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+#     #是否启用springcloud config bus
+#     bus:
+#       enabled: true
+#  #     trace:
+#    #     enabled: true   #开启跟踪总线事件
+
+#     stream:
+#       kafka:
+#         binder:
+#           #Kafka的消息中间件服务器地址
+#           brokers: localhost:9092
+#           # 是否自动创建主题
+#           auto-create-topics: true
+#           #zookeeper默认地址
+#           zk_nodes: localhost:2181
+
+
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        #include：refresh ,health ,info #打开部分
+        # spring boot 2.x 默认只开启了info 和 health ，*代表开启全部访问
+
+
+eureka:
+  client:
+    #      注册到注册中心
+    service-url:
+      defaultZone: http://localhost:8651/eureka/,http://localhost:8652/eureka/
+# # 当输入  http://localhost:9000/actuator/shutdown就会关机
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#           include: shutdown
+#   endpoint:
+#     shutdown:
+#         enabled: true
+
+
+feign:
+  hystrix:
+    enabled: true
+  client:
+    config:
+      default:
+        #不设置connectTimeout会导致readTimeout设置不生效
+        #超时时间默认为1s
+        #建立连接所用的时间，适用于网络状况正常的情况下，两端连接所需要的时间
+        connectTimeout: 1500
+        # 指建立连接后从服务端读取到可用资源所用的时间
+        readTimeout: 3000
+        loggerLevel: BASIC  #  设置Fegin的日志级别 共有 NONE BASIC HEADERS FULL
+  httpclient:
+    enabled: true  #开启feign对  httpclient  的支持
+    max-connections: 200      #最大连接数  具体情况需要根据业务调整
+    max-connections-per-route: 50   #每个路径的最大连接数
+
+
+#在30秒内，发生20次以上的请求时，假如错误率达到50%以上，则断路器将被打开。
+hystrix:
+  command:
+    default:  # 或者填写具体的服务名称
+      circuitBreaker:
+        sleepWindowInMilliseconds: 30000
+        #窗口期
+        requestVolumeThreshold: 5
+        #请求阈值
+        errorThresholdPercentage: 60
+        #错误百分比阈值
