--- a/Smart_parking_server/User_module/pom.xml
+++ b/Smart_parking_server/User_module/pom.xml
@@ -10,7 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>User_module</artifactId>
-    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -77,7 +76,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.3</version>
         </dependency>
-
+        <!-- spring boot 集成的grpc 服务端包-->
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>2.13.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
