--- a/Smart_parking_server/User_module/src/main/resources/application.yml
+++ b/Smart_parking_server/User_module/src/main/resources/application.yml
@@ -3,7 +3,6 @@ server:
 
 spring:
 
-
   datasource:
     url: jdbc:mysql://localhost:3306/Smart_parking_data?useUnicode=true&characterEncoding=UTF-8
     username: root
@@ -33,3 +32,16 @@ spring:
         max-idle: 8 #最大空闲连接，默认
         min-idle: 0 #最小空闲连接，默认
         max-wait: 100ms #连接等待时间
+
+grpc:
+  server:
+    port: 9090
+    address: 0.0.0.0
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        #include：refresh ,health ,info #打开部分
+        # spring boot 2.x 默认只开启了info 和 health ，*代表开启全部访问
