--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
   <packaging>pom</packaging>
 
 
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.12.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
-  </parent>
+<!--  <parent>-->
+<!--    <groupId>org.springframework.boot</groupId>-->
+<!--    <artifactId>spring-boot-starter-parent</artifactId>-->
+<!--    <version>2.3.12.RELEASE</version>-->
+<!--    <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+<!--  </parent>-->
 
 
 <!--统一管理jar包版本-->
