--- a/Smart_parking_server/pom.xml
+++ b/Smart_parking_server/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+
+        <!-- Dubbo Spring Boot Starter -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.7.8</version>
+        </dependency>
+
         <!-- grpc底层通信组件  有问题-->
         <dependency>
             <groupId>io.grpc</groupId>
