--- a/Smart_parking_server/User_module/src/main/resources/application.yml
+++ b/Smart_parking_server/User_module/src/main/resources/application.yml
@@ -45,3 +45,16 @@ management:
         include: "*"
         #include：refresh ,health ,info #打开部分
         # spring boot 2.x 默认只开启了info 和 health ，*代表开启全部访问
+dubbo:
+  application:
+    name: userService
+    #当前服务名字
+  registry:
+    address:
+    #注册中心地址
+    protocol:
+    #注册中心协议
+  protocol:
+    name: dubbo
+    #协议
+    port: 100800
