--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
       子模块继承后锁定版本，子模块可以不用写groupId和version-->
   <dependencyManagement>
     <dependencies>
+
       <!--   spring boot 2.3.12.RELEASE   -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -45,6 +46,8 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+
       <!--   spring cloud Hoxton.SR12   -->
       <dependency>
         <groupId>org.springframework.cloud</groupId>
@@ -53,14 +56,18 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!--   spring cloud 2.1.0.RELEASE   -->
+
+
+      <!--   spring cloud alibaba 2.1.0.RELEASE   -->
       <dependency>
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.2.7.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+
       <!-- Apache Dubbo  -->
       <dependency>
         <groupId>org.apache.dubbo</groupId>
