--- a/Smart_parking_server/pom.xml
+++ b/Smart_parking_server/pom.xml
@@ -30,7 +30,18 @@
             <url>https://maven.aliyun.com/repository/central</url>
         </pluginRepository>
     </pluginRepositories>
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
