--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>Smart_parking_server</module>
-      <module>FastDFS</module>
+    <module>FastDFS</module>
+    <module>GateWayServer</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -82,15 +83,7 @@
 
   <dependencies>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
