--- a/Smart_parking_server/ParkingLot_module/src/main/resources/application.yml
+++ b/Smart_parking_server/ParkingLot_module/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 
 spring:
 
+  application:
+    name: ParkingLotService
+
   datasource:
     url: jdbc:mysql://localhost:3306/Smart_parking_data?useUnicode=true&characterEncoding=UTF-8
     username: root
@@ -27,4 +30,5 @@ spring:
         max-idle: 8 #最大空闲连接，默认
         min-idle: 0 #最小空闲连接，默认
         max-wait: 100ms #连接等待时间
+
 
