--- a/Smart_parking_server/Integral_module/src/main/resources/application.yml
+++ b/Smart_parking_server/Integral_module/src/main/resources/application.yml
@@ -20,3 +20,13 @@ spring:
       simple:
         prefetch: 1   #每次只能获取一条消息，处理完才能获取下一条（提升消息处理速度，避免消息堆积）
 
+
+  cloud:
+    nacos:
+      server-addr: localhost:8848      #nacos服务地址
+      #配置集群名称，可实现实例的集群属性配置
+      #服务间调用默认使用轮训，优先使用相同集群的服务，若不可用，再找其他的
+      discovery:
+        cluster-name: ServerMaster
+        ephemeral: false    #设置为非临时实例
+#        namespace:    #填写命名空间id，用于做环境隔离
