--- a/Smart_parking_server/ParkingLot_module/src/main/resources/application.yml
+++ b/Smart_parking_server/ParkingLot_module/src/main/resources/application.yml
@@ -32,3 +32,24 @@ spring:
         max-wait: 100ms #连接等待时间
 
 
+  cloud:
+    nacos:
+      server-addr: localhost:8848      #nacos服务地址
+      #配置集群名称，可实现实例的集群属性配置
+      #服务间调用默认使用轮训，优先使用相同集群的服务，若不可用，再找其他的
+      discovery:
+        cluster-name: ServerMaster
+        ephemeral: false    #设置为非临时实例
+#        namespace:    #填写命名空间id，用于做环境隔离
+
+
+ribbon:
+  eager-load:
+    #Ribbon默认采用懒加载，，只有第一次访问时才会去创建LoadBalanceClient，请求时间很长
+    #而饥饿加载则会在项目启动时自动创建，降低第一次访问的耗时
+    #开启饥饿加载
+    enabled: true
+    #指定饥饿加载的服务名称
+    clients:
+      - UserService
+      - OrderService
