--- a/Smart_parking_server/Administrators_module/src/main/resources/application.yml
+++ b/Smart_parking_server/Administrators_module/src/main/resources/application.yml
@@ -45,7 +45,7 @@ ribbon:
     #指定饥饿加载的服务名称
     clients:
       - UserService
-      - OrderService
+      - OrderServicecd
       - ParkingLotService
 
 dubbo:
