--- a/Smart_parking_server/Integral_module/src/main/resources/application.yml
+++ b/Smart_parking_server/Integral_module/src/main/resources/application.yml
@@ -2,7 +2,8 @@ server:
   port: 9005
 
 spring:
-
+  application:
+    name: IntegralService
 
   datasource:
     url: jdbc:mysql://localhost:3306/Smart_parking_data?useUnicode=true&characterEncoding=UTF-8
