--- a/Smart_parking_server/User_module/src/main/resources/application.yml
+++ b/Smart_parking_server/User_module/src/main/resources/application.yml
@@ -60,9 +60,11 @@ ribbon:
       - OrderService
       - ParkingLotService
       - VehicleService
+      - IntegralService
 
 
 dubbo:
+  
   consumer:
     check: false    #关闭启动时检查
     retries: 2      #请求服务失败时，重试次数
