--- a/Minio_Utils/pom.xml
+++ b/Minio_Utils/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>Minio_Uilts</artifactId>
 
@@ -19,6 +20,8 @@
 
 
     <dependencies>
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
