Minio部分已完成，等待测试

--- a/Smart_parking_server/Vehicle_module/pom.xml
+++ b/Smart_parking_server/Vehicle_module/pom.xml
@@ -24,6 +24,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Minio_Uilts</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>3.6.10.Final</version>
