--- a/Smart_parking_server/User_module/pom.xml
+++ b/Smart_parking_server/User_module/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>BasicTools</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Minio_Uilts</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!--        RabbitMQ消息序列化改为JSON         -->
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
